--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -73,11 +73,10 @@
             android:text="5. DimensionRatio"
             app:layout_constraintDimensionRatio="1:1.5"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintVertical_bias="0.296"
-            app:layout_constraintHorizontal_bias="0.051"/>
+            app:layout_constraintHorizontal_bias="0.099" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/button" app:layout_constraintVertical_bias="0.046"/>
 
     <!--horizontal, vertical이 반대임-->
     <!--horizontal, end-->
