--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,11 +72,11 @@
             android:layout_height="0dp"
             android:text="5. DimensionRatio"
             app:layout_constraintDimensionRatio="1:1.5"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintHorizontal_bias="0.099" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/button" app:layout_constraintVertical_bias="0.046"/>
+            app:layout_constraintTop_toBottomOf="@+id/button" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/button3"/>
 
     <!--horizontal, vertical이 반대임-->
     <!--horizontal, end-->
